first connections to api - get only

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,5 +1,8 @@
 <div class="container" ng-controller="Home">
 
+	<!-- <h2>Api test</h2>
+	<pre class="alert alert-info">{{ test | json }}</pre> -->
+
 	<div class="row">
 		<!-- <div class="col-sm-6">
 			<div class="panel panel-primary">
