--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -18,7 +18,7 @@
 				<li ng-class="getActiveClass('scores')"><a href="#/scores">Výsledky</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li ng-hide="logged()" ng-class="getActiveClass('/login')"><a href="#/login">Přihlásit se</a></li>
+				<li ng-hide="logged()" ng-class="getActiveClass('login')"><a href="#/login">Přihlásit se</a></li>
 				<li ng-show="logged()" ng-click="logout()"><a class="cursor-pointer">Odhlásit se</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
