--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,29 @@
-html, body {
+
+html {
+	position: relative;
+	min-height: 100%;
+}
+
+body {
 	min-width: 375px;
+	margin-bottom: 60px;
+	font-family: "Segoe UI",Helvetica,Arial,sans-serif;
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	padding: 15px 0;
+	color: #999;
+	background-color: #f5f5f5;
+	font-size: 90%;
+}
+
+footer p {
+	margin: 0;
+	padding: 0 1em;
 }
 
 .no-padding {
@@ -115,6 +139,7 @@ ol.steps li.disabled {
 	color: #fff;
 	background-color: #1c2e40;
 	font-size: 110%;
+	z-index: 10;
 }
 
 .stepBack .stepTitle {
