--- a/src/partials/newTournament.html
+++ b/src/partials/newTournament.html
@@ -1,60 +1,11 @@
-<div class="container" ng-controller="newTournament" ng-cloak>
+<div class="container" ng-controller="newTournament">
 
-	<form class="form">
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="name">Název:</label>
-			<div class="col-sm-10">
-				<input class="form-control" type="test" id="name" ng-model="nt.name" placeholder="Název">
-			</div>
-		</div>
+	<ul class="nav nav-tabs">
+		<li ng-repeat="tab in tabs" ng-class="{active:isActiveTab(tab.url)}" ng-click="onClickTab(tab)">
+			<a>{{tab.title}}</a>
+		</li>
+	</ul>
 
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="date">Datum konání:</label>
-			<div class="col-sm-10">
-				<div class="input-group date">
-					<input class="form-control" type="text" id="date" ng-model="nt.date" placeholder="Datum konání">
-					<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-				</div>
-			</div>
-		</div>
-
-		<div class="form-group row">
-			<div class="col-sm-2">ID</div>
-			<div class="col-sm-5">Název</div>
-			<div class="col-sm-5">Skupina</div>
-		</div>
-
-		<div class="form-group row" ng-repeat="data in nt.table">
-			<div class="col-sm-2">
-				<input class="form-control" type="text" ng-model="data.id" placeholder="ID">
-			</div>
-			<div class="col-sm-5">
-				<input class="form-control" type="text" ng-model="data.name" placeholder="Název">
-			</div>
-			<div class="col-sm-5">
-				<input class="form-control" type="text" ng-model="data.group" placeholder="Skupina">
-			</div>
-		</div>
-
-		<div class="form-group">
-			<button class="btn btn-secondary" ng-click="addRow()">Přidat další</button>
-		</div>
-
-		<div class="form-group row">
-			<div class="col-sm-offset-2 col-sm-10">
-				<input class="btn btn-primary" type="submit" ng-click="update(nt)" value="Uložit">
-				<input class="btn btn-secondary" type="button" ng-click="reset()" value="Reset">
-			</div>
-		</div>
-	</form>
-	<pre>nt = {{nt | json}}</pre>
-	<pre>master = {{master | json}}</pre>
+	<div class="tabPage" ng-include="currentTab"></div>
 
 </div>
-
-<script>
-	$('.form-group .date').datepicker({
-		format: "dd. mm. yyyy",
-		language: "cs"
-	});
-</script>
