--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,6 +12,11 @@ body {
 	font-family: "Segoe UI",Helvetica,Arial,sans-serif;
 }
 
+.navbar-fixed-bottom, 
+.navbar-fixed-top {
+	z-index: 9;
+}
+
 footer {
 	position: absolute;
 	bottom: 0;
@@ -29,7 +34,7 @@ footer p {
 }
 
 .form-control-label {
-	padding-top: 6px;
+	padding-top: 7px;
 }
 
 
@@ -239,4 +244,21 @@ ol.steps li.disabled {
 	tr.sm-show {
 		display: table-row;
 	}
+}
+
+.form-group-set {
+	padding: 1em;
+	margin-bottom: 1em;
+	border-radius: 4px;
+	border: 1px #ccc solid;
+	background-color: #f5f5f5;
+}
+
+.form-group-set label>span {
+	margin-left: 4px;
+	margin-right: 10px;
+}
+
+.form-group-set label input[type=checkbox] {
+	position: absolute;
 }
