--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -82,6 +82,37 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Vytvořit nový účet</div>
+				<div class="panel-body">
+					<form class="form">
+						<div class="form-group">
+							<label class="sr-only" for="logName">Název účtu</label>
+							<input class="form-control" id="logName" placeholder="Název účtu" type="text" 
+							ng-model="form.register.name" 
+							required oninvalid="this.setCustomValidity('Povinný údaj.')" oninput="this.setCustomValidity('')">
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="registerEmail">E-mail</label>
+							<input class="form-control" id="registerEmail" type="email" placeholder="E-mail" 
+							ng-model="form.register.email" 
+							required oninvalid="this.setCustomValidity('Povinný údaj.')" oninput="this.setCustomValidity('')">
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="registerPass">Heslo</label>
+							<input class="form-control" id="registerPass" type="password" placeholder="Heslo" 
+							ng-model="form.register.password" 
+							required oninvalid="this.setCustomValidity('Povinný údaj.')" oninput="this.setCustomValidity('')">
+						</div>
+						<div class="form-group">
+							<input type="submit" class="btn btn-primary" ng-click="register('register', form.register)" value="Vytvořit">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 
 		<!-- <div class="col-sm-6">
 			<div class="panel panel-primary">
