--- a/src/partials/newTournament.html
+++ b/src/partials/newTournament.html
@@ -6,6 +6,16 @@
 		</li>
 	</ul>
 
-	<div class="tabPage" ng-include="currentTab"></div>
+	<form class="form">
+		<div ng-repeat="tab in tabs" ng-show="isActiveTab(tab.url)" class="tabPage" ng-include="getFullTabUrl(tab.url)"></div>
+		
+
+		<div class="form-group row">
+			<div class="col-sm-offset-2 col-sm-10">
+				<input class="btn btn-primary" type="submit" ng-click="update(tour)" value="Uložit">
+				<input class="btn btn-secondary" type="button" ng-click="reset()" value="Reset">
+			</div>
+		</div>
+	</form>
 
 </div>
