--- a/src/partials/newTournament/tourForm.html
+++ b/src/partials/newTournament/tourForm.html
@@ -1,79 +1,88 @@
-<form class="form">
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="name">Název:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="name" ng-model="tour.name" placeholder="Název">
-		</div>
-	</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="startDate">Datum zahájení:</label>
-		<div class="col-sm-10">
-			<div class="input-group date">
-				<input class="form-control" type="text" id="startDate" ng-model="tour.startDate" placeholder="Datum zahájení">
-				<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-			</div>
-		</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="name">Název:</label>
+	<div class="col-sm-10">
+		<input class="form-control" type="text" id="name" ng-model="tour.name" placeholder="Název">
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="endDate">Datum ukončení:</label>
-		<div class="col-sm-10">
-			<div class="input-group date">
-				<input class="form-control" type="text" id="endDate" ng-model="tour.endDate" placeholder="Datum ukončení">
-				<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-			</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="startDate">Datum zahájení:</label>
+	<div class="col-sm-10">
+		<div class="input-group date">
+			<input class="form-control from-date" type="text" id="startDate" ng-model="tour.startDate" placeholder="Datum zahájení">
+			<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
 		</div>
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="division">Kategorie:</label> <!-- select -->
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="division" ng-model="tour.division" placeholder="Kategorie">
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="endDate">Datum ukončení:</label>
+	<div class="col-sm-10">
+		<div class="input-group date">
+			<input class="form-control to-date" type="text" id="endDate" ng-model="tour.endDate" placeholder="Datum ukončení">
+			<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
 		</div>
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="teams">Počet týmů:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="teams" ng-model="tour.teams" placeholder="Počet týmů">
-		</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="place">Místo:</label>
+	<div class="col-sm-10">
+		<input class="form-control" type="text" id="place" ng-model="tour.place" placeholder="Místo">
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="ready">Ready:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="ready" ng-model="tour.ready" placeholder="Ready">
-		</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="country">Země:</label>
+	<div class="col-sm-10">
+		<input class="form-control" type="text" id="country" ng-model="tour.country" placeholder="Země">
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="active">Active:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="active" ng-model="tour.active" placeholder="Active">
-		</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="division">Kategorie:</label> <!-- select -->
+	<div class="col-sm-10">
+		<select class="form-control" id="division" ng-model="tour.division" 
+			ng-options="obj.id as obj.division for obj in divisions">
+			<option value="">Vyberte kategorii</option>
+		</select>
 	</div>
+</div>
 
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="terminated">Terminated:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="terminated" ng-model="tour.terminated" placeholder="Terminated">
-		</div>
+<div class="form-group row">
+	<label class="form-control-label col-sm-2" for="teams">Počet týmů:</label>
+	<div class="col-sm-10">
+		<input class="form-control" type="number" id="teams" ng-model="tour.teams" placeholder="Počet týmů">
 	</div>
-
-	<div class="form-group row">
-		<div class="col-sm-offset-2 col-sm-10">
-			<input class="btn btn-primary" type="submit" ng-click="update(nt)" value="Uložit">
-			<input class="btn btn-secondary" type="button" ng-click="reset()" value="Reset">
-		</div>
-	</div>
-</form>
-<!-- <pre>nt = {{nt | json}}</pre>
-<pre>master = {{master | json}}</pre> -->
+</div>
 
 <script>
-	$('.form-group .date').datepicker({
-		format: "dd. mm. yyyy",
-		language: "cs"
-	});
+	// $('.form-group .date').datepicker({
+	// 	format: "yyyy-mm-dd", //dd. mm. yyyy
+	// 	language: "cs"
+	// })
+	let startDate = new Date('01/01/2012')
+	let FromEndDate = new Date()
+	let ToEndDate = new Date()
+	$('.from-date').datepicker({
+		language: "cs",
+		format: "yyyy-mm-dd",
+		autoclose: true
+	}).on('changeDate', function(selected){
+		startDate = new Date(selected.date.valueOf())
+		startDate.setDate(startDate.getDate(new Date(selected.date.valueOf())))
+		$('.to-date').datepicker('setStartDate', startDate)
+	})
+	$('.to-date').datepicker({
+		language: "cs",
+		format: "yyyy-mm-dd",
+		autoclose: true
+	})
+	.on('changeDate', function(selected){
+		FromEndDate = new Date(selected.date.valueOf())
+		FromEndDate.setDate(FromEndDate.getDate(new Date(selected.date.valueOf())))
+		$('.from-date').datepicker('setEndDate', FromEndDate)
+	})
+
 </script>
