--- a/src/partials/scores.html
+++ b/src/partials/scores.html
@@ -2,7 +2,7 @@
 
 	<h1>Výsledky</h1>
 
-	<form class="form">
+	<form novalidate class="form">
 		<div class="form-group">
 			<select class="form-control" ng-model="selected.tournament"
 				ng-options="obj.name for obj in tours">
