--- a/src/partials/scoring/onlineScoring.html
+++ b/src/partials/scoring/onlineScoring.html
@@ -9,7 +9,7 @@
 
 		<!-- <pre>{{actualScore | json}}</pre> -->
 
-		<form class="form">
+		<form novalidate class="form">
 
 			<div class="form-group row">
 				<div class="col-sm-6">
