--- a/src/partials/newTournament.html
+++ b/src/partials/newTournament.html
@@ -6,10 +6,9 @@
 		</li>
 	</ul>
 
-	<form class="form">
+	<form novalidate class="form" name="newTour">
 		<div ng-repeat="tab in tabs" ng-show="isActiveTab(tab.url)" class="tabPage" ng-include="getFullTabUrl(tab.url)"></div>
 		
-
 		<div class="form-group row">
 			<div class="col-sm-offset-2 col-sm-10">
 				<input class="btn btn-primary" type="submit" ng-click="update(tour)" value="Uložit">
