--- a/src/partials/newTournament/fieldsForm.html
+++ b/src/partials/newTournament/fieldsForm.html
@@ -3,8 +3,11 @@
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="name{{$index}}">Název:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="name{{$index}}" ng-model="data.name" placeholder="Název">
+		<div class="col-sm-8">
+			<input class="form-control" type="text" id="name{{$index}}" ng-model="data.name" placeholder="Název" name="fieldName{{$index}}" required>
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="newTour['fieldName'+$index].$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
