--- a/src/partials/newTournament/matchesForm.html
+++ b/src/partials/newTournament/matchesForm.html
@@ -3,8 +3,11 @@
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="identificator{{$index}}">Identifikátor:</label>
-		<div class="col-sm-10">
-			<input class="form-control" type="text" id="identificator{{$index}}" ng-model="data.identificator" placeholder="Identifikátor">
+		<div class="col-sm-8">
+			<input class="form-control" type="text" id="identificator{{$index}}" name="identificator" ng-model="data.identificator" placeholder="Identifikátor" required>
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="newTour.identificator.$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
@@ -14,8 +17,11 @@
 			<span>TBA</span>
 			<input class="" type="checkbox" id="homeSeedTBA{{$index}}" ng-model="data.homeSeed" ng-true-value="null" ng-false-value="">
 		</label>
-		<div class="col-sm-9">
+		<div class="col-sm-7">
 			<input class="form-control" type="text" id="homeSeed{{$index}}" ng-model="data.homeSeed" placeholder="Domácí">
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="customValidation.matches[$index].homeSeed.$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
@@ -25,51 +31,81 @@
 			<span>TBA</span>
 			<input class="" type="checkbox" id="awaySeedTBA{{$index}}" ng-model="data.awaySeed" ng-true-value="null" ng-false-value="">
 		</label>
-		<div class="col-sm-9">
+		<div class="col-sm-7">
 			<input class="form-control" type="text" id="awaySeed{{$index}}" ng-model="data.awaySeed" placeholder="Hosté">
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="customValidation.matches[$index].awaySeed.$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
 	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="time{{$index}}">Čas:</label>
-		<div class="col-sm-5">
+		<label class="form-control-label col-sm-2" for="time{{$index}}">Čas začátku:</label>
+		<div class="col-sm-4">
 			<input type="text" id="time{{$index}}" class="form-control timepicker" ng-model="data.time.start.time" placeholder="Čas">
 		</div>
-		<div class="col-sm-5">
+		<div class="col-sm-4">
 			<div class="input-group date">
-				<input class="form-control" type="text" id="endDate{{$index}}" ng-model="data.time.start.date" placeholder="Datum">
+				<input class="form-control" type="text" id="startDate{{$index}}" ng-model="data.time.start.date" placeholder="Datum">
 				<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
 			</div>
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="customValidation.matches[$index].startdate.$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="field{{$index}}">Hřiště:</label>
-		<div class="col-sm-10">
-			<select class="form-control" id="field{{$index}}" ng-model="data.field" 
+		<div class="col-sm-8">
+			<select class="form-control" id="field{{$index}}" ng-model="data.field" name="field{{$index}}" required
 				ng-options="obj.id as obj.name for obj in tour.fields | definedValue:'name'">
 				<option value="">Vyberte hřiště</option>
 			</select>
 		</div>
+		<div class="col-sm-2 formMsg" ng-messages="newTour['field'+$index].$error">
+			<div ng-include="ngMessagesFile"></div>
+		</div>
 	</div>
 
 	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="winner{{$index}}">Postup vítěze:</label>
-		<div class="col-sm-10">
-			<select class="form-control" id="winner{{$index}}" ng-model="data.winner" 
+		<label class="form-control-label col-sm-2" for="winnerStep{{$index}}">Postup vítěze:</label>
+		<div class="col-sm-4">
+			<select class="form-control" id="winner{{$index}}" ng-model="data.winnerNextStep" 
 				ng-options="obj.identificator for obj in tour.matches | definedValue:'identificator'">
-				<option value="">Vyberte zápas</option>
+				<option value="">Zápas</option>
 			</select>
+		</div>
+		<div class="col-sm-1 text-center formMsg">nebo</div>
+		<div class="col-sm-3">
+			<input type="number" id="winnerStanding{{$index}}" class="form-control" ng-model="data.winnerFinalStanding" placeholder="Umístění">
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="customValidation.matches[$index].winner.$error">
+			<div ng-include="ngMessagesFile"></div>
 		</div>
 	</div>
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="looser{{$index}}">Postup poraženého:</label>
-		<div class="col-sm-10">
-			<select class="form-control" id="looser{{$index}}" ng-model="data.looser" 
+		<div class="col-sm-4">
+			<select class="form-control" id="looserStep{{$index}}" ng-model="data.looserNextStep" name="looser{{$index}}"
 				ng-options="obj.identificator for obj in tour.matches | definedValue:'identificator'">
-				<option value="">Vyberte zápas</option>
+				<option value="">Zápas</option>
 			</select>
+		</div>
+		<div class="col-sm-1 text-center formMsg">nebo</div>
+		<div class="col-sm-3">
+			<input type="number" id="winnerStanding{{$index}}" class="form-control" ng-model="data.looserFinalStanding" placeholder="Umístění">
+		</div>
+		<div class="col-sm-2 formMsg" ng-messages="customValidation.matches[$index].looser.$error">
+			<div ng-include="ngMessagesFile"></div>
+		</div>
+	</div>
+
+	<div class="form-group row">
+		<label class="form-control-label col-sm-2" for="description{{$index}}">Popis:</label>
+		<div class="col-sm-8">
+			<input class="form-control" type="text" id="description{{$index}}" ng-model="data.description" placeholder="Popis">
 		</div>
 	</div>
 
