--- a/src/partials/scoring/selectTournament.html
+++ b/src/partials/scoring/selectTournament.html
@@ -4,7 +4,7 @@
 
 	<h1>Výběr turnaje</h1>
 
-	<form class="form">
+	<form novalidate class="form">
 		<div class="form-group">
 			<!-- <div class="dropdown pull-right makePaymentDropdownMainDiv" auto-close="outsideClick">
 				<button class="btn btn-default dropdown-toggle makePaymentDropdownBtn" type="button" id="individualDrop" data-toggle="dropdown">{{payment.entity}}<span class="caret pull-right"></span></button>
