--- a/src/partials/spirit.html
+++ b/src/partials/spirit.html
@@ -2,7 +2,7 @@
 
 	<h1>Hodnotit spirit of the game</h1>
 
-	<form class="form">		
+	<form novalidate class="form">		
 		<div class="form-group">
 			<select class="form-control" ng-model="selected.match" 
 				ng-options="obj.homeTeam.name + ' vs. ' + obj.awayTeam.name for obj in data">
