--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -14,10 +14,12 @@
 				<li ng-class="getActiveClass('/')"><a href="#/">Hlavní stánka</a></li>
 				<li ng-show="logged(3)" ng-class="getActiveClass('newTournament')"><a href="#/newTournament">Nový turnaj</a></li>
 				<li ng-show="logged(2)" ng-class="getActiveClass('scoring')"><a href="#/scoring">Skórovat</a></li>
-				<li ng-show="logged(1, true)" ng-class="getActiveClass('spirit')"><a href="#/spirit">Hodnotit spirit</a></li>
+				<li ng-show="logged(1, true) || logged(4, true)" ng-class="getActiveClass('spirit')"><a href="#/spirit">Hodnotit spirit</a></li>
 				<li ng-class="getActiveClass('scores')"><a href="#/scores">Výsledky</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<li ng-show="logged(4, true)" ng-class="getActiveClass('admin')"><a href="#/admin">Administrace</a></li>
+				<li ng-show="logged(1, true) || logged(3, true)" ng-class="getActiveClass('profile')"><a href="#/profile">Profil</a></li>
 				<li ng-hide="logged()" ng-class="getActiveClass('login')"><a href="#/login">Přihlásit se</a></li>
 				<li ng-show="logged()" ng-click="logout()"><a class="cursor-pointer">Odhlásit se</a></li>
 			</ul>
