--- a/src/partials/scoring/selectTournament.html
+++ b/src/partials/scoring/selectTournament.html
@@ -24,8 +24,8 @@
 		</div>
 
 		<div class="form-group">
-			<input class="btn btn-primary" type="button" value="Přihlásit se ke skórování" 
-			ng-disabled="isEmpty(selected.tournament)" ng-click=""> <!-- TODO login('tournament', selected, false) -->
+			<input class="btn btn-primary" type="button" value="Vybrat" 
+			ng-disabled="isEmpty(selected.tournament)" ng-click="select()"> <!-- TODO login('tournament', selected, false) -->
 		</div>
 	</form>
 
